<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:layout_above="@id/bottom_nav"
        android:layout_marginBottom="-1dp"
        android:background="@color/dark"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" android:background="@color/backgroundDark">

        <ImageButton
            android:id="@+id/setfolder"
            android:layout_width="87dp"
            android:layout_height="54dp"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/backgroundDark"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/informationbutton"
            app:layout_constraintHorizontal_bias="0.96"
            app:layout_constraintStart_toEndOf="@+id/editTextText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16000003"
            app:srcCompat="@drawable/foldericon" />

        <ImageButton
            android:id="@+id/informationbutton"
            android:layout_width="52dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:background="@color/backgroundDark"
            android:scaleType="centerCrop"
            android:src="@drawable/informationicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/editTextText"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:ems="10"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/maintext"
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:layout_above="@+id/bottom_nav"
        android:layout_below="@+id/header"
        android:background="@color/dark"
        android:orientation="vertical">

        <TextView
            android:id="@+id/introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginVertical="20dp"
            android:text="@string/quick_introduction"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/backgroundDark"
            android:padding="10dp"
            android:text="@string/info"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/backgroundDark"
            android:padding="10dp"
            android:text="@string/setup"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/usingapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@color/backgroundDark"
            android:padding="10dp"
            android:text="@string/using_app"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@color/backgroundDark"
            android:padding="10dp"
            android:text="@string/recording"
            android:textColor="@color/white" />

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/backgroundDark">


        <ImageButton
            android:id="@+id/measurebutton"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="60dp"
            android:background="@color/backgroundDark"
            android:scaleType="centerCrop"
            android:src="@drawable/measurefragmentnobg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/logbutton"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginEnd="68dp"
            android:background="@color/backgroundDark"
            android:scaleType="centerCrop"
            android:src="@drawable/logiconfrag"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>