<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    android:padding="0dp"
    tools:context=".MeasureHome"
    tools:layout_editor_absoluteY="1dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/container"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/backgroundDark">

                <ImageButton
                    android:id="@+id/informationbutton"
                    android:layout_width="52dp"
                    android:layout_height="53dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/backgroundDark"
                    android:scaleType="centerCrop"
                    android:src="@drawable/informationicon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.979"
                    app:layout_constraintStart_toEndOf="@+id/editTextText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/editTextText"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:text="@string/app_name"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.09"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_nav"
            android:layout_below="@+id/header"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:background="@color/dark">

                <TextView
                    android:id="@+id/textViewLux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="88dp"
                    android:text="@string/lux"
                    android:textColor="#FFFFFF"
                    android:visibility="visible"
                    app:layout_constraintEnd_toStartOf="@+id/textViewMax"
                    app:layout_constraintStart_toEndOf="@+id/textViewMin"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textLightMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="0"
                    android:textAlignment="gravity"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/resetMinMaxBtn"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMax" />

                <TextView
                    android:id="@+id/textViewMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/maxLux"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toEndOf="@+id/resetMinMaxBtn"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:text="TextView"
                    android:textAlignment="gravity"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textLightMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="0"
                    android:textAlignment="gravity"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/resetMinMaxBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMin" />

                <TextView
                    android:id="@+id/textViewMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/minLux"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toStartOf="@+id/resetMinMaxBtn"
                    app:layout_constraintHorizontal_bias="0.485"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageButton
                    android:id="@+id/resetMinMaxBtn"
                    android:layout_width="57dp"
                    android:layout_height="43dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/imageresetnobg"
                    app:layout_constraintBottom_toTopOf="@+id/textViewLux"
                    app:layout_constraintEnd_toEndOf="@+id/textViewLight"
                    app:layout_constraintStart_toStartOf="@+id/textViewLight"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.222" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/backgroundDark">

                <ImageButton
                    android:id="@+id/homebutton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="60dp"
                    android:background="@color/backgroundDark"
                    android:scaleType="centerCrop"
                    android:src="@drawable/homeicon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageButton
                    android:id="@+id/logbutton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="68dp"
                    android:background="@color/backgroundDark"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logiconfrag"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>

